--- a/M1_Assignment_Stock_Price_Prediction_with_LLM.ipynb
+++ b/M1_Assignment_Stock_Price_Prediction_with_LLM.ipynb
@@ -77,78 +77,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
-        "id": "iMgjTlOjk05n",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7b8b5cbe-0d12-4bf6-ea0f-07895f6814e4"
+        "id": "iMgjTlOjk05n"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: yfinance in /usr/local/lib/python3.11/dist-packages (0.2.65)\n",
-            "Requirement already satisfied: pandas>=1.3.0 in /usr/local/lib/python3.11/dist-packages (from yfinance) (2.2.2)\n",
-            "Requirement already satisfied: numpy>=1.16.5 in /usr/local/lib/python3.11/dist-packages (from yfinance) (2.0.2)\n",
-            "Requirement already satisfied: requests>=2.31 in /usr/local/lib/python3.11/dist-packages (from yfinance) (2.32.3)\n",
-            "Requirement already satisfied: multitasking>=0.0.7 in /usr/local/lib/python3.11/dist-packages (from yfinance) (0.0.12)\n",
-            "Requirement already satisfied: platformdirs>=2.0.0 in /usr/local/lib/python3.11/dist-packages (from yfinance) (4.3.8)\n",
-            "Requirement already satisfied: pytz>=2022.5 in /usr/local/lib/python3.11/dist-packages (from yfinance) (2025.2)\n",
-            "Requirement already satisfied: frozendict>=2.3.4 in /usr/local/lib/python3.11/dist-packages (from yfinance) (2.4.6)\n",
-            "Requirement already satisfied: peewee>=3.16.2 in /usr/local/lib/python3.11/dist-packages (from yfinance) (3.18.2)\n",
-            "Requirement already satisfied: beautifulsoup4>=4.11.1 in /usr/local/lib/python3.11/dist-packages (from yfinance) (4.13.4)\n",
-            "Requirement already satisfied: curl_cffi>=0.7 in /usr/local/lib/python3.11/dist-packages (from yfinance) (0.12.0)\n",
-            "Requirement already satisfied: protobuf>=3.19.0 in /usr/local/lib/python3.11/dist-packages (from yfinance) (5.29.5)\n",
-            "Requirement already satisfied: websockets>=13.0 in /usr/local/lib/python3.11/dist-packages (from yfinance) (15.0.1)\n",
-            "Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.11/dist-packages (from beautifulsoup4>=4.11.1->yfinance) (2.7)\n",
-            "Requirement already satisfied: typing-extensions>=4.0.0 in /usr/local/lib/python3.11/dist-packages (from beautifulsoup4>=4.11.1->yfinance) (4.14.1)\n",
-            "Requirement already satisfied: cffi>=1.12.0 in /usr/local/lib/python3.11/dist-packages (from curl_cffi>=0.7->yfinance) (1.17.1)\n",
-            "Requirement already satisfied: certifi>=2024.2.2 in /usr/local/lib/python3.11/dist-packages (from curl_cffi>=0.7->yfinance) (2025.7.14)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas>=1.3.0->yfinance) (2.9.0.post0)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas>=1.3.0->yfinance) (2025.2)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests>=2.31->yfinance) (3.4.2)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests>=2.31->yfinance) (3.10)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests>=2.31->yfinance) (2.5.0)\n",
-            "Requirement already satisfied: pycparser in /usr/local/lib/python3.11/dist-packages (from cffi>=1.12.0->curl_cffi>=0.7->yfinance) (2.22)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas>=1.3.0->yfinance) (1.17.0)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-16-1433581267.py:9: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-            "  data = yf.download(\"AAPL\", start=\"2020-01-01\", end=\"2023-01-01\")\n",
-            "\r[*********************100%***********************]  1 of 1 completed"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Price        Close        High         Low        Open        Volume\n",
-            "Ticker        AAPL        AAPL        AAPL        AAPL          AAPL\n",
-            "count   756.000000  756.000000  756.000000  756.000000  7.560000e+02\n",
-            "mean    127.633101  129.181519  125.971433  127.555151  1.120920e+08\n",
-            "std      30.421461   30.698898   30.139548   30.449561  5.602586e+07\n",
-            "min      54.378582   55.379535   51.528416   55.277744  3.519590e+07\n",
-            "25%     112.709538  114.204933  111.251818  112.889687  7.636470e+07\n",
-            "50%     133.010765  134.143878  131.050657  132.832284  9.493580e+07\n",
-            "75%     148.221512  149.388600  146.276903  147.588785  1.296327e+08\n",
-            "max     178.645645  179.558457  175.809061  179.254190  4.265100e+08\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# prompt: Load historical stock price data for Apple Inc. (AAPL) from 2020-01-01 to 2023-01-01 using Yahoo Finance and summarize its key statistics.\n",
         "\n",
@@ -166,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -325,7 +258,7 @@
         "else:\n",
         "    print(\"The 'data' DataFrame was empty after loading. Please check the yfinance download step.\")"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2363,7 +2296,7 @@
         "outputId": "78fce6f9-e093-4657-93ac-9455379a08c6",
         "id": "14Bm5DvoXgQn"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3529,7 +3462,7 @@
         "id": "D36s4IvxU8xl",
         "outputId": "32f179d7-ea90-4d95-c27f-6416b6427cfc"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4869,7 +4802,7 @@
         "print(\"- Economic Indicators: Data like interest rates, inflation, or GDP growth could be included as macroeconomic features, potentially influencing overall market trends and thus stock prices.\")\n",
         "print(\"- Industry/Sector Indices: Including the performance of relevant technology sector indices could provide context on broader market movements affecting AAPL.\")\n"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6077,7 +6010,7 @@
         "else:\n",
         "    print(\"The 'data' DataFrame is empty. Please ensure the previous steps to load and process data were successful.\")"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6125,7 +6058,7 @@
           "height": 728
         },
         "id": "7D1l-TlTXub7",
-        "outputId": "b2cc084e-f5bb-4ef9-eeef-cf8a6931d400"
+        "outputId": "ab4d8af5-6117-446a-e792-d8c67dee0ee4"
       },
       "source": [
         "# Drop rows with NaN values\n",
@@ -6187,8 +6120,11 @@
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Training Logistic Regression Model...\n",
             "\n",
@@ -6199,63 +6135,69 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
             "text/plain": [
-              "array([[  4,  95],\n",
-              "       [  2, 105]])"
+              "array([[  9,  90],\n",
+              "       [  6, 101]])"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n",
             "Classification Report:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.67      0.04      0.08        99\n",
-            "           1       0.53      0.98      0.68       107\n",
+            "           0       0.60      0.09      0.16        99\n",
+            "           1       0.53      0.94      0.68       107\n",
             "\n",
             "    accuracy                           0.53       206\n",
-            "   macro avg       0.60      0.51      0.38       206\n",
-            "weighted avg       0.59      0.53      0.39       206\n",
+            "   macro avg       0.56      0.52      0.42       206\n",
+            "weighted avg       0.56      0.53      0.43       206\n",
             "\n",
             "\n",
             "Training K-Nearest Neighbors Model...\n",
             "\n",
             "--- K-Nearest Neighbors Performance ---\n",
-            "Accuracy: 0.51\n",
+            "Accuracy: 0.48\n",
             "\n",
             "Confusion Matrix:\n"
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
             "text/plain": [
               "array([[43, 56],\n",
-              "       [45, 62]])"
+              "       [51, 56]])"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n",
             "Classification Report:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.49      0.43      0.46        99\n",
-            "           1       0.53      0.58      0.55       107\n",
+            "           0       0.46      0.43      0.45        99\n",
+            "           1       0.50      0.52      0.51       107\n",
             "\n",
-            "    accuracy                           0.51       206\n",
-            "   macro avg       0.51      0.51      0.51       206\n",
-            "weighted avg       0.51      0.51      0.51       206\n",
+            "    accuracy                           0.48       206\n",
+            "   macro avg       0.48      0.48      0.48       206\n",
+            "weighted avg       0.48      0.48      0.48       206\n",
             "\n",
             "\n",
             "Training Support Vector Machine Model...\n"
